--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
@@ -24,11 +25,13 @@
         "tenancy/identification-driver-console": "^2.4",
         "tenancy/identification-driver-environment": "^2.4",
         "tenancy/identification-driver-http": "^2.4",
-        "tenancy/identification-driver-queue": "^2.4"
+        "tenancy/identification-driver-queue": "^2.4",
+        "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.75",
+        "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
